--- a/paper/main.tex
+++ b/paper/main.tex
@@ -11,6 +11,7 @@
 \usepackage[]{graphicx}
 % \usepackage[draft]{graphicx}
 \usepackage[todonotes={textsize=tiny}]{changes}
+% \usepackage[todonotes={textsize=tiny}, final]{changes}
 \definechangesauthor[color=purple]{ALB}
 \usepackage{todonotes}
 % \input{../macros}
